# scratch-vm-native

./: .gitignore  LICENSE  README.md  digital_clock.c  digital_clock.h  digital_clock.sb3  digital_clock_test.c  meson.build  meson_options.txt  repeat_until_x.c  repeat_until_x.h  repeat_until_x.sb3  repeat_until_x_test.c  scratch-transpiler.py  scratch-vm  scratch-vm.c  test_program.c  test_program.sb3  variables.sb3  wait.sb3
.github/workflows/: test.yml
frontend/: meson.build
frontend/sdl/: meson.build  sdl_main.cpp
scripts/: update_launchjson.py
templates/: scratch-transpiler-main-template.c  scratch-transpiler-main-template.h  scratch-transpiler-test-template.c  scratch-vm-types.h  scratch-vm-variables-internal.h  scratch-vm-variables-public.h  scratch-vm-variables.c
tests/: digital_clock_gtest.cpp  digital_clock_test.c  scratch-vm-variables_gtest.cpp  variables_gtest.cpp
